# descale

./: README.md  descale.py  meson.build
.github/workflows/: build.yaml
include/: descale.h
src/: common.h  descale.cc  vsplugin.cc
src/x86/: descale_avx2.c
